RESOLVED FIXED101095
[BlackBerry] Fix compile-time warning of a possible empty-body if statement
https://bugs.webkit.org/show_bug.cgi?id=101095
Summary [BlackBerry] Fix compile-time warning of a possible empty-body if statement
Nima Ghanavatian
Reported 2012-11-02 13:36:20 PDT
SSIA
Attachments
Patch (3.31 KB, patch)
2012-11-02 13:48 PDT, Nima Ghanavatian
no flags
Nima Ghanavatian
Comment 1 2012-11-02 13:48:53 PDT
Yong Li
Comment 2 2012-11-02 13:57:31 PDT
Comment on attachment 172129 [details] Patch OK. but we really should fix BBLOG
WebKit Review Bot
Comment 3 2012-11-02 14:32:23 PDT
Comment on attachment 172129 [details] Patch Clearing flags on attachment: 172129 Committed r133348: <http://trac.webkit.org/changeset/133348>
WebKit Review Bot
Comment 4 2012-11-02 14:32:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.