[BlackBerry] Fix compile-time warning of a possible empty-body if statement https://bugs.webkit.org/show_bug.cgi?id=101095

Patch by Nima Ghanavatian <nghanavatian@rim.com> on 2012-11-02
Reviewed by Yong Li.
Internally reviewed by Jeff Rogers.

BBLOG might be compiled out leaving an if statement with an empty
body. This is giving us a warning at the moment. Simply putting braces
around it will fail as well because then we'd have braces around a
single-line if. So, in following with the style observed in other parts
of BackingStore.cpp, break up the log message and add braces.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::blitToWindow):
(BlackBerry::WebKit::BackingStorePrivate::fillWindow):
(BlackBerry::WebKit::BackingStorePrivate::clearWindow):

Canonical link: https://commits.webkit.org/119197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133348 268f45cc-cd09-0410-ab3c-d52691b4dbfc